tests/integration/semantic_ast/snapshots/integration_test__semantic_ast__semantic_ast_projects_elements_bridge__semantic_ast_projects_elements_bridge_fixtures__scheme_element_catalog.snap
---
source: tests/integration/semantic_ast/semantic_ast_projects_elements_bridge_fixtures.rs
expression: "serde_json::to_string_pretty(&serde_json::json!({\n    \"source\": \"languages/org/v1/modules/org-elements/catalog.ss\", \"allElements\":\n    UPSTREAM_ORG_ELEMENT_ALL_ELEMENTS, \"greaterElements\":\n    UPSTREAM_ORG_ELEMENT_GREATER_ELEMENTS, \"allObjects\":\n    UPSTREAM_ORG_ELEMENT_ALL_OBJECTS, \"recursiveObjects\":\n    UPSTREAM_ORG_ELEMENT_RECURSIVE_OBJECTS, \"affiliatedKeywords\":\n    UPSTREAM_ORG_ELEMENT_AFFILIATED_KEYWORDS,\n})).unwrap()"
---
{
  "affiliatedKeywords": [
    "CAPTION",
    "DATA",
    "HEADER",
    "HEADERS",
    "LABEL",
    "NAME",
    "PLOT",
    "RESNAME",
    "RESULT",
    "RESULTS",
    "SOURCE",
    "SRCNAME",
    "TBLNAME"
  ],
  "allElements": [
    "babel-call",
    "center-block",
    "clock",
    "comment",
    "comment-block",
    "diary-sexp",
    "drawer",
    "dynamic-block",
    "example-block",
    "export-block",
    "fixed-width",
    "footnote-definition",
    "headline",
    "horizontal-rule",
    "inlinetask",
    "item",
    "keyword",
    "latex-environment",
    "node-property",
    "paragraph",
    "plain-list",
    "planning",
    "property-drawer",
    "quote-block",
    "section",
    "special-block",
    "src-block",
    "table",
    "table-row",
    "verse-block"
  ],
  "allObjects": [
    "bold",
    "citation",
    "citation-reference",
    "code",
    "entity",
    "export-snippet",
    "footnote-reference",
    "inline-babel-call",
    "inline-src-block",
    "italic",
    "line-break",
    "latex-fragment",
    "link",
    "macro",
    "radio-target",
    "statistics-cookie",
    "strike-through",
    "subscript",
    "superscript",
    "table-cell",
    "target",
    "timestamp",
    "underline",
    "verbatim"
  ],
  "greaterElements": [
    "center-block",
    "drawer",
    "dynamic-block",
    "footnote-definition",
    "headline",
    "inlinetask",
    "item",
    "plain-list",
    "property-drawer",
    "quote-block",
    "section",
    "special-block",
    "table",
    "org-data"
  ],
  "recursiveObjects": [
    "bold",
    "citation",
    "footnote-reference",
    "italic",
    "link",
    "subscript",
    "radio-target",
    "strike-through",
    "superscript",
    "table-cell",
    "underline"
  ],
  "source": "languages/org/modules/org-elements/catalog.ss"
}
